--- a/Nodes/UI/Screens/Asset_Manager/Asset_Manager.yaml
+++ b/Nodes/UI/Screens/Asset_Manager/Asset_Manager.yaml
@@ -3423,6 +3423,24 @@ Children:
       DataType: Size
       ModellingRule: Optional
       Value: 10.0
+    - Name: Label1
+      Type: Label
+      Children:
+      - Name: Text
+        Type: BaseDataVariableType
+        DataType: LocalizedText
+        ModellingRule: Optional
+        Value: {"LocaleId":"en-US","Text":"hola mundo"}
+      - Name: Width
+        Type: BaseVariableType
+        DataType: Size
+        ModellingRule: Optional
+        Value: 215.0
+      - Name: Height
+        Type: BaseVariableType
+        DataType: Size
+        ModellingRule: Optional
+        Value: 160.0
   - Name: HitTestVisible
     Type: BaseDataVariableType
     DataType: Boolean
