--- a/Nodes/UI/Screens/BPCS/Métricas/Métricas.yaml
+++ b/Nodes/UI/Screens/BPCS/Métricas/Métricas.yaml
@@ -4,3 +4,4 @@ Children:
 - File: Mensuales/Mensuales.yaml
 - File: Lazos/Lazos.yaml
 - File: Actuales/Actuales.yaml
+- File: Manual_Auto/Manual_Auto.yaml
