--- a/Nodes/NetLogic/NetLogic.yaml
+++ b/Nodes/NetLogic/NetLogic.yaml
@@ -1,2 +1,11 @@
 Name: NetLogic
 Type: NetLogicCategoryFolder
+Children:
+- Name: AssetManager
+  Id: g=d16a66c020b1912c376e06080340f573
+  Type: NetLogic
+  Children:
+  - Class: Method
+    Name: CreateAsset
+  - Class: Method
+    Name: DeleteAll
